--- a/courseWork.html
+++ b/courseWork.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>Haoran's courseWork</title>
+  <link rel="stylesheet" href="css/styles.css">
+
 </head>
 <h3>Course work</h3>
 <hr>
