--- a/hobbies.html
+++ b/hobbies.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>Haoran's hobbies</title>
+  <link rel="stylesheet" href="css/styles.css">
+
 </head>
 
 <body>
